Fix line spacing

--- a/css/templatemo-orange.css
+++ b/css/templatemo-orange.css
@@ -31,7 +31,7 @@ h2 {
 
 .accent {
   font-family: 'Proxima Bold';
-  line-height: 14px;
+  line-height: 24px;
   color: #FFA943;
 }
 
